Fix: Emoji button clipping over top border

--- a/src/components/primary/chat/_chatbox.scss
+++ b/src/components/primary/chat/_chatbox.scss
@@ -96,9 +96,10 @@
     }
     .emojiButton-3uL3Aw{
         width: 48px;
-        height: 48px;
+        height: 46px;
         padding: 0;
         margin: 0;
+        top: 2px;
         &::before{
             content: "";
             width: 40px;
